// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component: TextArea should render a disabled textarea 1`] = `
.c1 {
  border: 1px solid;
  border-color: hsl(0,0%,90%);
  border-radius: 8px;
  min-height: 100px;
  min-width: 336px;
  box-sizing: border-box;
  font-size: 18px;
  line-height: 28px;
  padding: 8px 16px;
  outline: none;
  background-color: hsl(0,0%,90%);
  height: auto;
  width: auto;
  display: block;
  resize: none;
}

.c1:first-line {
  padding-right: 15px;
}

.c1:focus {
  border-color: hsl(200,96%,35%);
}

.c1::-webkit-input-placeholder {
  color: hsl(200,18%,45%);
  font-style: oblique;
}

.c1::-moz-placeholder {
  color: hsl(200,18%,45%);
  font-style: oblique;
}

.c1:-ms-input-placeholder {
  color: hsl(200,18%,45%);
  font-style: oblique;
}

.c1::placeholder {
  color: hsl(200,18%,45%);
  font-style: oblique;
}

.c0 {
  position: relative;
  display: block;
}

<div>
  <div
    class="c0"
  >
    <textarea
      class="c1"
      disabled=""
    />
  </div>
</div>
`;

exports[`component: TextArea should render a success textarea 1`] = `
.c1 {
  border: 1px solid;
  border-color: hsl(200,9%,35%);
  border-radius: 8px;
  min-height: 100px;
  min-width: 336px;
  box-sizing: border-box;
  font-size: 18px;
  line-height: 28px;
  padding: 8px 16px;
  outline: none;
  background-color: hsl(0,0%,100%);
  height: auto;
  width: auto;
  display: block;
  resize: none;
  border-color: hsl(145,89%,28%);
  background: hsla(145,89%,28%,0.3);
}

.c1:first-line {
  padding-right: 15px;
}

.c1:focus {
  border-color: hsl(200,96%,35%);
}

.c1::-webkit-input-placeholder {
  color: hsl(200,18%,45%);
  font-style: oblique;
}

.c1::-moz-placeholder {
  color: hsl(200,18%,45%);
  font-style: oblique;
}

.c1:-ms-input-placeholder {
  color: hsl(200,18%,45%);
  font-style: oblique;
}

.c1::placeholder {
  color: hsl(200,18%,45%);
  font-style: oblique;
}

.c0 {
  position: relative;
  display: block;
}

<div>
  <div
    class="c0"
  >
    <textarea
      class="c1"
    />
  </div>
</div>
`;

exports[`component: TextArea should render a textarea 1`] = `
.c1 {
  border: 1px solid;
  border-color: hsl(200,9%,35%);
  border-radius: 8px;
  min-height: 100px;
  min-width: 336px;
  box-sizing: border-box;
  font-size: 18px;
  line-height: 28px;
  padding: 8px 16px;
  outline: none;
  background-color: hsl(0,0%,100%);
  height: auto;
  width: auto;
  display: block;
  resize: none;
}

.c1:first-line {
  padding-right: 15px;
}

.c1:focus {
  border-color: hsl(200,96%,35%);
}

.c1::-webkit-input-placeholder {
  color: hsl(200,18%,45%);
  font-style: oblique;
}

.c1::-moz-placeholder {
  color: hsl(200,18%,45%);
  font-style: oblique;
}

.c1:-ms-input-placeholder {
  color: hsl(200,18%,45%);
  font-style: oblique;
}

.c1::placeholder {
  color: hsl(200,18%,45%);
  font-style: oblique;
}

.c0 {
  position: relative;
  display: block;
}

<div>
  <div
    class="c0"
  >
    <textarea
      class="c1"
    />
  </div>
</div>
`;

exports[`component: TextArea should render a textarea with a placeholder 1`] = `
.c1 {
  border: 1px solid;
  border-color: hsl(200,9%,35%);
  border-radius: 8px;
  min-height: 100px;
  min-width: 336px;
  box-sizing: border-box;
  font-size: 18px;
  line-height: 28px;
  padding: 8px 16px;
  outline: none;
  background-color: hsl(0,0%,100%);
  height: auto;
  width: auto;
  display: block;
  resize: none;
}

.c1:first-line {
  padding-right: 15px;
}

.c1:focus {
  border-color: hsl(200,96%,35%);
}

.c1::-webkit-input-placeholder {
  color: hsl(200,18%,45%);
  font-style: oblique;
}

.c1::-moz-placeholder {
  color: hsl(200,18%,45%);
  font-style: oblique;
}

.c1:-ms-input-placeholder {
  color: hsl(200,18%,45%);
  font-style: oblique;
}

.c1::placeholder {
  color: hsl(200,18%,45%);
  font-style: oblique;
}

.c0 {
  position: relative;
  display: block;
}

<div>
  <div
    class="c0"
  >
    <textarea
      class="c1"
      placeholder="Type something!"
    />
  </div>
</div>
`;

exports[`component: TextArea should render a warning textarea 1`] = `
.c1 {
  border: 1px solid;
  border-color: hsl(200,9%,35%);
  border-radius: 8px;
  min-height: 100px;
  min-width: 336px;
  box-sizing: border-box;
  font-size: 18px;
  line-height: 28px;
  padding: 8px 16px;
  outline: none;
  background-color: hsl(0,0%,100%);
  height: auto;
  width: auto;
  display: block;
  resize: none;
  border-color: hsl(47,82%,47%);
  background: hsla(47,82%,47%,0.3);
}

.c1:first-line {
  padding-right: 15px;
}

.c1:focus {
  border-color: hsl(200,96%,35%);
}

.c1::-webkit-input-placeholder {
  color: hsl(200,18%,45%);
  font-style: oblique;
}

.c1::-moz-placeholder {
  color: hsl(200,18%,45%);
  font-style: oblique;
}

.c1:-ms-input-placeholder {
  color: hsl(200,18%,45%);
  font-style: oblique;
}

.c1::placeholder {
  color: hsl(200,18%,45%);
  font-style: oblique;
}

.c0 {
  position: relative;
  display: block;
}

<div>
  <div
    class="c0"
  >
    <textarea
      class="c1"
    />
  </div>
</div>
`;

exports[`component: TextArea should render an error textarea 1`] = `
.c1 {
  border: 1px solid;
  border-color: hsl(200,9%,35%);
  border-radius: 8px;
  min-height: 100px;
  min-width: 336px;
  box-sizing: border-box;
  font-size: 18px;
  line-height: 28px;
  padding: 8px 16px;
  outline: none;
  background-color: hsl(0,0%,100%);
  height: auto;
  width: auto;
  display: block;
  resize: none;
  border-color: hsl(353,84%,44%);
  background: hsla(353,84%,44%,0.3);
}

.c1:first-line {
  padding-right: 15px;
}

.c1:focus {
  border-color: hsl(200,96%,35%);
}

.c1::-webkit-input-placeholder {
  color: hsl(200,18%,45%);
  font-style: oblique;
}

.c1::-moz-placeholder {
  color: hsl(200,18%,45%);
  font-style: oblique;
}

.c1:-ms-input-placeholder {
  color: hsl(200,18%,45%);
  font-style: oblique;
}

.c1::placeholder {
  color: hsl(200,18%,45%);
  font-style: oblique;
}

.c0 {
  position: relative;
  display: block;
}

<div>
  <div
    class="c0"
  >
    <textarea
      class="c1"
    />
  </div>
</div>
`;

exports[`component: TextArea should support margin space props 1`] = `
.c1 {
  border: 1px solid;
  border-color: hsl(200,9%,35%);
  border-radius: 8px;
  min-height: 100px;
  min-width: 336px;
  box-sizing: border-box;
  font-size: 18px;
  line-height: 28px;
  padding: 8px 16px;
  outline: none;
  background-color: hsl(0,0%,100%);
  height: auto;
  width: auto;
  display: block;
  resize: none;
}

.c1:first-line {
  padding-right: 15px;
}

.c1:focus {
  border-color: hsl(200,96%,35%);
}

.c1::-webkit-input-placeholder {
  color: hsl(200,18%,45%);
  font-style: oblique;
}

.c1::-moz-placeholder {
  color: hsl(200,18%,45%);
  font-style: oblique;
}

.c1:-ms-input-placeholder {
  color: hsl(200,18%,45%);
  font-style: oblique;
}

.c1::placeholder {
  color: hsl(200,18%,45%);
  font-style: oblique;
}

.c0 {
  position: relative;
  display: block;
  margin-left: 24px;
}

<div>
  <div
    class="c0"
  >
    <textarea
      class="c1"
    />
  </div>
</div>
`;

exports[`component: TextArea with theme customization should have 1px border radius 1`] = `
<DocumentFragment>
  .c1 {
  border: 1px solid;
  border-color: hsl(200,9%,35%);
  border-radius: 1px;
  min-height: 100px;
  min-width: 336px;
  box-sizing: border-box;
  font-size: 18px;
  line-height: 28px;
  padding: 8px 16px;
  outline: none;
  background-color: hsl(0,0%,100%);
  height: auto;
  width: auto;
  display: block;
  resize: none;
}

.c1:first-line {
  padding-right: 15px;
}

.c1:focus {
  border-color: hsl(200,96%,35%);
}

.c1::-webkit-input-placeholder {
  color: hsl(200,18%,45%);
  font-style: oblique;
}

.c1::-moz-placeholder {
  color: hsl(200,18%,45%);
  font-style: oblique;
}

.c1:-ms-input-placeholder {
  color: hsl(200,18%,45%);
  font-style: oblique;
}

.c1::placeholder {
  color: hsl(200,18%,45%);
  font-style: oblique;
}

.c0 {
  position: relative;
  display: block;
}

<div
    class="c0"
  >
    <textarea
      class="c1"
    />
  </div>
</DocumentFragment>
`;

exports[`component: TextArea with theme customization should have 2px border 1`] = `
<DocumentFragment>
  .c1 {
  border: 2px solid;
  border-color: hsl(200,9%,35%);
  border-radius: 8px;
  min-height: 100px;
  min-width: 336px;
  box-sizing: border-box;
  font-size: 18px;
  line-height: 28px;
  padding: 8px 16px;
  outline: none;
  background-color: hsl(0,0%,100%);
  height: auto;
  width: auto;
  display: block;
  resize: none;
}

.c1:first-line {
  padding-right: 15px;
}

.c1:focus {
  border-color: hsl(200,96%,35%);
}

.c1::-webkit-input-placeholder {
  color: hsl(200,18%,45%);
  font-style: oblique;
}

.c1::-moz-placeholder {
  color: hsl(200,18%,45%);
  font-style: oblique;
}

.c1:-ms-input-placeholder {
  color: hsl(200,18%,45%);
  font-style: oblique;
}

.c1::placeholder {
  color: hsl(200,18%,45%);
  font-style: oblique;
}

.c0 {
  position: relative;
  display: block;
}

<div
    class="c0"
  >
    <textarea
      class="c1"
    />
  </div>
</DocumentFragment>
`;

exports[`component: TextArea with theme customization should have 8px border radius 1`] = `
<DocumentFragment>
  .c1 {
  border: 1px solid;
  border-color: hsl(200,9%,35%);
  border-radius: 4px;
  min-height: 100px;
  min-width: 336px;
  box-sizing: border-box;
  font-size: 18px;
  line-height: 28px;
  padding: 8px 16px;
  outline: none;
  background-color: hsl(0,0%,100%);
  height: auto;
  width: auto;
  display: block;
  resize: none;
}

.c1:first-line {
  padding-right: 15px;
}

.c1:focus {
  border-color: hsl(200,96%,35%);
}

.c1::-webkit-input-placeholder {
  color: hsl(200,18%,45%);
  font-style: oblique;
}

.c1::-moz-placeholder {
  color: hsl(200,18%,45%);
  font-style: oblique;
}

.c1:-ms-input-placeholder {
  color: hsl(200,18%,45%);
  font-style: oblique;
}

.c1::placeholder {
  color: hsl(200,18%,45%);
  font-style: oblique;
}

.c0 {
  position: relative;
  display: block;
}

<div
    class="c0"
  >
    <textarea
      class="c1"
    />
  </div>
</DocumentFragment>
`;
